# grpc_crosscompile_conan

./: 01_profiles.sh  02_conan_install.sh  03_cmake_configure.sh  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py  conanfile.txt
cmake/: cmake_helper.cmake  crosstoolchain.cmake
conan/profiles/: grpc_repro  m1
protos/: CMakeLists.txt  interface.proto
